# chainalpha

./: .env.example  .gitignore  00_量化研究规划.md  AGENTS.md  LICENSE  plan.md  pyproject.toml
config/: costs.yaml  factor_screening.yaml  risk.yaml  universe_etf.yaml  universe_stocks.yaml
labs/theme_rotation_t1/: README.md  backtest_protocol.md  conftest.py  data_requirements.md  probe_akshare.py  rules.yaml  source_matrix.yaml  strategy_spec.md
labs/theme_rotation_t1/backtest/: __init__.py  last_run_summary.json  loop.py  report.py  run_degraded.py
labs/theme_rotation_t1/engine/: __init__.py  bars.py  costs.py  execution.py  filters.py  portfolio.py  risk.py  rules.py  setups.py
labs/theme_rotation_t1/forward_collect/: __init__.py  _common.py  collect_concept_constituents.py  collect_intraday_breadth.py  collect_minute_bars.py
labs/theme_rotation_t1/ingestion/: __init__.py  akshare_client.py  daily_bars.py  limits.py
labs/theme_rotation_t1/report/: ARTIFACTS.md  __init__.py  artifacts.py  charts.py  html_render.py  make_report.py
labs/theme_rotation_t1/schemas/: setup_stats.schema.yaml  trade_log.schema.yaml
labs/theme_rotation_t1/tests/: synth.py  test_backtest_loop.py  test_execution.py  test_filters.py  test_limits.py  test_portfolio.py  test_report.py  test_risk.py  test_rules_and_costs.py  test_setups.py
reports/: factor_screening_template.md  lab_theme_rotation_t1.md  lab_theme_rotation_t1_data_audit.md
scripts/: download_universe.py  run_factor_screening.py
tests/: test_akshare_panel.py  test_config_schema.py  test_event_study.py  test_events.py
(+12 files in other folders)
